# aws-3tier-platform

./: .gitignore  CLAUDE.md  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
docs/cli-playbooks/: 01-data-tier.md  02-app-tier.md  03-presentation.md  04-fis-experiments.md  05-dr-runbooks.md
platform_lab/: alarms_stack.py  app_tier_stack.py  data_tier_stack.py  presentation_stack.py
scripts/: drain_asg.py  rds_snapshot.py  verify_platform.py
